--- a/app/src/main/java/cyril/.travis.yml
+++ b/app/src/main/java/cyril/.travis.yml
@@ -1,14 +1,16 @@
-language: java
-android:
-  components:
-    - android-28
-    - build-tools-27.0.3
+language: android
 
-env:
-  global:
-    # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=8
+#components:
+#    - android-28
+#    - build-tools-28.0.0
+
+#
+#env:
+#  global:
+#    # install timeout in minutes (2 minutes by default)
+#    - ADB_INSTALL_TIMEOUT=8
 
 # Run assemble and unit tests
 script:
-  - ./gradlew clean assembleDebug assembleRelease testDebug
+  - mvn test
+#  - ./gradlew clean assembleDebug assembleRelease testDebug
