--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,6 @@ dependencies {
     def work_version = "1.0.0-alpha08"
     implementation "android.arch.work:work-runtime-ktx:$work_version"
 
-
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
