--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     implementation 'com.android.support:design:28.0.0'
 
     def work_version = "1.0.0-alpha08"
     implementation "android.arch.work:work-runtime-ktx:$work_version"
 
     implementation 'com.google.code.gson:gson:2.8.5'
+  //  testImplementation 'org.junit.jupiter:junit-jupiter-api'
+
+    testImplementation "org.mockito:mockito-core:2.+"
+
+
 
 }
