--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.android.support:design:28.0.0'
@@ -48,6 +50,9 @@ dependencies {
   //  testImplementation 'org.junit.jupiter:junit-jupiter-api'
 
     testImplementation "org.mockito:mockito-core:2.+"
+
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:3.0.1"
+
 
 
 
