--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,15 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.android.support:exifinterface:28.0.0"
+    implementation 'com.android.support:design:28.0.0'
 
     testImplementation 'junit:junit:4.12'
+//    testImplementation 'com.android.support.test:runner:1.0.2'
+//    testImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
-
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.android.support:design:28.0.0'
 
     def work_version = "1.0.0-alpha08"
     implementation "android.arch.work:work-runtime-ktx:$work_version"
