--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "cyril.cieslak.mymynews"
+        applicationId "cyril.cieslak.simplMeteoByGpsPoint"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -35,6 +35,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.android.support:exifinterface:28.0.0"
     implementation 'com.android.support:design:28.0.0'
+
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
 
     testImplementation 'junit:junit:4.12'
 //    testImplementation 'com.android.support.test:runner:1.0.2'
