--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:dist="http://schemas.android.com/apk/distribution"
-          package="cyril.cieslak.mymynews">
+          package="cyril.cieslak.simplMeteoByGpsPoint">
 
     <dist:module dist:instant="true"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
             android:allowBackup="true"
@@ -14,27 +17,27 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".NotificationActivity">
+        <activity android:name="cyril.cieslak.simplMeteoByGpsPoint.NotificationActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".MainActivity"/>
+                    android:value="cyril.cieslak.simplMeteoByGpsPoint.MainActivity"/>
         </activity>
-        <activity android:name=".ResultSearchActivity">
+        <activity android:name="cyril.cieslak.simplMeteoByGpsPoint.ResultSearchActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".SearchActivity"/>
+                    android:value="cyril.cieslak.simplMeteoByGpsPoint.SearchActivity"/>
         </activity>
-        <activity android:name=".SearchActivity">
+        <activity android:name="cyril.cieslak.simplMeteoByGpsPoint.SearchActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".MainActivity"/>
+                    android:value="cyril.cieslak.simplMeteoByGpsPoint.MainActivity"/>
         </activity>
-        <activity android:name=".WebViewActivity">
+        <activity android:name="cyril.cieslak.simplMeteoByGpsPoint.WebViewActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".MainActivity"/>
+                    android:value="cyril.cieslak.simplMeteoByGpsPoint.MainActivity"/>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity android:name="cyril.cieslak.simplMeteoByGpsPoint.MainActivity"
                   android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"
